--- a/retwisj/src/main/webapp/WEB-INF/templates/header.jspf
+++ b/retwisj/src/main/webapp/WEB-INF/templates/header.jspf
@@ -1,18 +1,19 @@
 <%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
 <%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
-<%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
+<%@ taglib prefix="c" uri="jakarta.tags.core" %>
+<%@ taglib prefix="fmt" uri="jakarta.tags.fmt" %>
+<%@ taglib prefix="fn" uri="jakarta.tags.functions" %>
 
-<%@page import="org.springframework.data.redis.samples.retwisj.RetwisSecurity"%>
+<%@page import="org.springframework.data.redis.samples.retwisj.RetwisSecurity" %>
 
 <!-- Retwis :: a Spring Data Redis Framework demonstration -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
-	<head>
-	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	  <meta http-equiv="Pragma" content="no-cache">
-	  <link rel="stylesheet" href="<c:url value="/static/styles/screen.css"/>" type="text/css" media="screen, projection"/>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="Pragma" content="no-cache">
+    <link rel="stylesheet" href="<c:url value="/static/styles/screen.css"/>" type="text/css"
+          media="screen, projection"/>
 	  <link rel="stylesheet" href="<c:url value="/static/styles/print.css"/>" type="text/css" media="print"/> 
 	  <!--[if lt IE 8]>
     	<link rel="stylesheet" href="/static/styles/blueprint/ie.css" type="text/css" media="screen, projection"/>
