--- a/retwisj/src/main/webapp/WEB-INF/templates/post.jspf
+++ b/retwisj/src/main/webapp/WEB-INF/templates/post.jspf
@@ -4,16 +4,22 @@
             <p>
 		      <a class="user" href="<c:url value="/!${p.name}"/>"><b>${p.name}</b></a> ${p.content} 
 		      <br/>
-		      <!-- link to post -->
-		      <a href="<c:url value="/status?pid=${p.pid}"/>"><fmt:message key="${p.time}"><fmt:param value="${p.timeArg}"/></fmt:message></a>
-			  <!-- reply connection -->
-			  <c:if test="${!empty p.replyPid}">
-			     <a href="<c:url value="/status?pid=${p.replyPid}"/>"><fmt:message key="inreplyto"/> ${p.replyTo}</a>
-			  </c:if>
-			  &nbsp;&nbsp;&nbsp;
-			  <c:if test="${loggedIn}">
-			    <a href="<c:url value="/!${loggedUser}?replyto=${p.name}&replypid=${p.pid}"/>"><fmt:message key="reply"/></a>
-			  </c:if>
+              <!-- link to post -->
+              <a href="<c:url value="/status?pid=${p.pid}"/>"><fmt:message key="${p.time}"><fmt:param
+                      value="${p.timeArg}"/></fmt:message></a>
+              <!-- reply connection -->
+              <c:if test="${!empty p.replyPid}">
+                <a href="<c:url value="/status?pid=${p.replyPid}"/>"><fmt:message key="inreplyto"/> ${p.replyTo}</a>
+              </c:if>
+              &nbsp;&nbsp;&nbsp;
+              <c:if test="${loggedIn}">
+                <a href="<c:url value="/!${loggedUser}?replyto=${p.name}&replypid=${p.pid}"/>"><fmt:message
+                        key="reply"/></a>
+              </c:if>
+              &nbsp;&nbsp;&nbsp;
+              <c:if test="${loggedUser.equals(p.name)}">
+                <a href="<c:url value="/posts/${p.pid}/delete"/>"><fmt:message key="delete"/></a>
+              </c:if>
             </p>
-		   </div>
-		   </c:forEach>
+           </div>
+           </c:forEach>
